Fix Rubik font vertical centering and remove slider bubble % symbol
- Add ascent-override and descent-override to Rubik @font-face
  declarations to fix text sitting too high in WebView2
- Remove percentage sign from slider bubble, show number only

--- a/public/chart.css
+++ b/public/chart.css
@@ -4,6 +4,8 @@
 	font-weight: 300;
 	font-style: normal;
 	font-display: swap;
+	ascent-override: 95%;
+	descent-override: 25%;
 }
 
 @font-face {
@@ -12,6 +14,8 @@
 	font-weight: 400;
 	font-style: normal;
 	font-display: swap;
+	ascent-override: 95%;
+	descent-override: 25%;
 }
 
 @font-face {
@@ -20,6 +24,8 @@
 	font-weight: 500;
 	font-style: normal;
 	font-display: swap;
+	ascent-override: 95%;
+	descent-override: 25%;
 }
 
 * {
